z-index bug fixed

--- a/src/styles/components/_navBar.scss
+++ b/src/styles/components/_navBar.scss
@@ -78,6 +78,7 @@
     align-items: center;
     flex-direction: column;
     padding-top: 70px;
+    z-index: 999;
 
     &__ul {
         list-style: none;
